Made some changes

--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -33,6 +33,8 @@
                     return Icons.Material.Filled.LocalGasStation;
                 case "Swap":
                     return Icons.Material.Filled.SwapVert;
+                case "Caution":
+                    return IconCollection.AlertTriangle;
                 case "Death":
                     return IconCollection.Skull;
                 default:
@@ -41,6 +43,7 @@
         }
     }
 
+    // We might want to make the following common somewhere
     private Color _signalColour
     {
         get
@@ -52,6 +55,7 @@
                 case "EngineDnf":
                     return Color.Error;
                 case "Mistake":
+                case "Caution":
                     return Color.Warning;
                 case "Pitstop":
                     return Color.Success;
