--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -10,11 +10,11 @@
             <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem">New</MudButton>
         </ToolBarContent>
         <Columns>
-            <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.Category" />
-            <PropertyColumn Property="e => e.Limit" />
-            <PropertyColumn Property="e => e.Punishment" />
-            <PropertyColumn Property="e => e.Odds" />
+            <PropertyColumn Property="e => e!.Name" />
+            <PropertyColumn Property="e => e!.Category" />
+            <PropertyColumn Property="e => e!.Limit" />
+            <PropertyColumn Property="e => e!.Punishment" />
+            <PropertyColumn Property="e => e!.Odds" />
             <TemplateColumn T="Incident" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
