--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -7,7 +7,7 @@
 <PageTitle>Traits</PageTitle>
 
 <MudContainer>
-    <MudDataGrid T="Trait" Items="TraitData" Bordered="true" Dense="true" Class="mt-2">
+    <MudDataGrid T="Trait" Items="TraitData" Dense="true" Class="mt-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Traits</MudText>
 
@@ -20,10 +20,10 @@
         </ToolBarContent>
         <Columns>
             <HierarchyColumn T="Trait" />
-            <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.Type" />
-            <PropertyColumn Property="e => e.ForWetConditions" Title="Wet" />
-            <PropertyColumn Property="e => e.State" />
+            <PropertyColumn Property="e => e!.Name" />
+            <PropertyColumn Property="e => e!.Type" />
+            <PropertyColumn Property="e => e!.ForWetConditions" Title="Wet" />
+            <PropertyColumn Property="e => e!.State" />
             <TemplateColumn T="Trait" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
