--- a/SimTECH/SimTECH/Pages/UserManual/Guide.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Guide.razor
@@ -21,6 +21,7 @@
                 <MudTreeViewItem @bind-Expanded="@racingFolderExpanded" Value="@("Racing")" Icon="@(racingFolderExpanded ? Icons.Custom.Uncategorized.FolderOpen : Icons.Custom.Uncategorized.Folder)">
                     <MudTreeViewItem Value="@("Overtaking")" Icon="@Icons.Custom.FileFormats.FileExcel" />
                 </MudTreeViewItem>
+                <MudTreeViewItem Value="@("Glossary")" Icon="@Icons.Custom.FileFormats.FileExcel" />
             </MudTreeView>
         </MudPaper>
     </MudItem>
@@ -48,6 +49,7 @@
             case "Drivers": TopicContent = typeof(DriverTopic); break;
             case "Racing": TopicContent = typeof(Racing); break;
             case "Overtaking": TopicContent = typeof(Overtaking); break;
+            case "Glossary": TopicContent = typeof(Glossary); break;
             default: TopicContent = typeof(UnknownTopic); break;
         }
     }
