--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Setup/DriverTopic.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Setup/DriverTopic.razor
@@ -1,16 +1,26 @@
-﻿<MudText>Blokes participating during races</MudText>
+﻿<MudPaper>
+    <MudText>Blokes participating at races</MudText>
 
-<MudSimpleTable>
-    <thead>
-        <tr>
-            <th>Skill</th>
-            <th>Is that good?</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>20</td>
-            <td>Naw, that's shite</td>
-        </tr>
-    </tbody>
-</MudSimpleTable>
+    <MudSimpleTable>
+        <thead>
+            <tr>
+                <th>Skill</th>
+                <th>Is that good?</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>30</td>
+                <td>Naw, that's shite</td>
+            </tr>
+            <tr>
+                <td>40</td>
+                <td>Decent, nothin special tho</td>
+            </tr>
+            <tr>
+                <td>50</td>
+                <td>Absolute legend. Master driver. Hero.</td>
+            </tr>
+        </tbody>
+    </MudSimpleTable>
+</MudPaper>
