--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -7,7 +7,7 @@
 <PageTitle>Drivers</PageTitle>
 
 <MudContainer>
-    <MudDataGrid T="Driver" Items="@DriverData" Class="mt-2">
+    <MudDataGrid T="Driver" Items="@DriverData" Dense="true" Class="mt-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Drivers</MudText>
             <MudSpacer />
@@ -18,9 +18,9 @@
         </ToolBarContent>
         <Columns>
             <HierarchyColumn T="Driver" />
-            <PropertyColumn Property="e => e.FullName" Title="Name" />
-            <PropertyColumn Property="e => e.Abbreviation" Title="Tag" />
-            <PropertyColumn Property="e => e.DateOfBirth" Title="DOB" Format="d" />
+            <PropertyColumn Property="e => e!.FullName" Title="Name" />
+            <PropertyColumn Property="e => e!.Abbreviation" Title="Tag" />
+            <PropertyColumn Property="e => e!.DateOfBirth" Title="DOB" Format="d" />
             <TemplateColumn T="Driver" Title="Nation" SortBy="e => e.Country">
                 <CellTemplate>
                     <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" />
@@ -33,7 +33,7 @@
                     </MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e.Alive" />
+            <PropertyColumn Property="e => e!.Alive" />
             <TemplateColumn T="Driver" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup Size="@Size.Small" Class="ml-auto">
@@ -62,8 +62,8 @@
 </MudContainer>
 
 @code {
-    private List<Driver> DriverData = new();
-    private List<CurrentDriver> CurrentDrivers = new();
+    private List<Driver> DriverData;
+    private List<CurrentDriver> CurrentDrivers;
 
     protected override async Task OnInitializedAsync()
     {
