--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -6,7 +6,7 @@
 <PageTitle>Teams</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.Medium">
-    <MudDataGrid T="Team" Items="@TeamData" Class="mt-2">
+    <MudDataGrid T="Team" Items="@TeamData" Dense="true" Class="mt-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Teams</MudText>
             <MudSpacer />
@@ -14,13 +14,13 @@
         </ToolBarContent>
         <Columns>
             <HierarchyColumn T="Team" />
-            <PropertyColumn Property="e => e.Name" />
+            <PropertyColumn Property="e => e!.Name" />
             <TemplateColumn T="Team" Title="Country" SortBy="e => e.Country">
                 <CellTemplate>
                     <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" />
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e.State" />
+            <PropertyColumn Property="e => e!.State" />
             <TemplateColumn T="Team" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
