--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Overtaking.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Overtaking.razor
@@ -1,13 +1,18 @@
-﻿<MudText>
+﻿<MudText Typo="Typo.subtitle1">What is it?</MudText>
+<MudText>
     Overtaking is done by racing drivers, usually.
     <br />
     Attack minus Defensive, if result is negative then subtract that from attackers total.
 </MudText>
 
+<MudDivider Class="my-1" />
+
 <MudText Typo="Typo.subtitle1">Team role</MudText>
 <MudText>
     Main drivers immediatly get to overtake support drivers
 </MudText>
+
+<MudDivider Class="my-1" />
 
 <MudText Typo="Typo.subtitle1">Pleet's explanation</MudText>
 <MudText>
