--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -139,6 +139,15 @@ th {
     box-shadow: var(--mud-palette-secondary) 0 0 2em;
 }
 
+.extra-dense .mud-table-cell {
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+}
+
+.overflow-x-hide {
+    overflow-x: hidden;
+}
+
 .hide-sort-icons .column-options {
     display: none !important;
 }
