--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -10,7 +10,7 @@
 else
 {
     <MudContainer>
-        <MudTable Items="@Model.PracticeDrivers.OrderBy(e => e.Position)" id="practice-table">
+        <MudTable Items="@Model.PracticeDrivers.OrderBy(e => e.Position)" id="practice-table" Dense="true" Class="extra-dense">
             <ToolBarContent>
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
                     <CountryFlag Code="@Model.Country" />
