--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -2,17 +2,12 @@
 @inject RaceService _raceService
 @inject NavigationManager _nav
 
-@if (loading)
-{
-    <MudAlert Severity="Severity.Warning">This bad boi is still loading, some patience please!</MudAlert>
-}
-else
-{
+<MudContainer MaxWidth="MaxWidth.False">
     <MudTabs>
         <MudTabPanel Text="Q1">
             @*
-                Table underneath is a good target for a refactor to a component, perhaps even a nested component! 
-                Nested as in a component QualifyingSession implements a component Session (which can be implemented by practice!)
+            Table underneath is a good target for a refactor to a component, perhaps even a nested component!
+            Nested as in a component QualifyingSession implements a component Session (which can be implemented by practice!)
             *@
             <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)" id="q1-result-table" Dense="true" Class="extra-dense">
                 <ToolBarContent>
@@ -79,13 +74,13 @@ else
                     </MudTd>
                     <MudTd>
                         <MudText>+@(context.GapQ1)</MudText>
-                    </MudTd>
-                </RowTemplate>
-            </MudTable>
-        </MudTabPanel>
-        <MudTabPanel Text="Q2" Disabled="@(advancedQ1 != Model.AmountRuns)">
-            @if (DriversInQ2 != null)
-            {
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudTabPanel>
+            <MudTabPanel Text="Q2" Disabled="@(advancedQ1 != Model.AmountRuns)">
+                @if (DriversInQ2 != null)
+                {
                 <MudTable Items="@DriversInQ2.OrderBy(e => e.PositionQ2)" id="q2-result-table" Dense="true" Class="extra-dense">
                     <ToolBarContent>
                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
@@ -151,9 +146,9 @@ else
                         </MudTd>
                         <MudTd>
                             <MudText>+@(context.GapQ2)</MudText>
-                        </MudTd>
+                            </MudTd>
                         </RowTemplate>
-                </MudTable>
+                    </MudTable>
             }
         </MudTabPanel>
         <MudTabPanel Text="Q3" Disabled="@(advancedQ2 != Model.AmountRuns)">
@@ -228,13 +223,13 @@ else
                         </MudTd>
                         <MudTd>
                             <MudText>+@(context.GapQ3)</MudText>
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
+                            </MudTd>
+                        </RowTemplate>
+                    </MudTable>
             }
         </MudTabPanel>
     </MudTabs>
-}
+</MudContainer>
 
 @code {
     [Parameter] public long RaceId { get; set; }
